changes all over the flow

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "scripts": {
-    "tailwind": "tailwindcss -i ./src/main.css -o ./build/tailwind.css --minify",
+    "tailwind": "tailwindcss -i ./src/main.css -o ./src/tailwind.css --minify",
     "dev": "concurrently \"npm run tailwind:watch\" \"npm run serve\"",
-    "tailwind:watch": "tailwindcss -i ./src/main.css -o ./build/tailwind.css --watch",
+    "tailwind:watch": "tailwindcss -i ./src/main.css -o ./src/tailwind.css --watch",
     "serve": "live-server ./",
     "start": "npm run serve",
-    "build": "tailwindcss -i ./src/main.css -o ./build/tailwind.css --minify"
+    "build": "tailwindcss -i ./src/main.css -o ./src/tailwind.css --minify"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
